@@ -1,18 +1,19 @@
-## Getting Started
+## Conta Banco
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+Desafio proposto durante o bootcamp Santander 2024 - backend com java.
 
-## Folder Structure
+O objetivo era criar um mini sistema de banco onde o usuário poderia criar a sua conta, apontando seu nome, agencia, numero da conta e saldo inicial.
 
-The workspace contains two folders by default, where:
+Fui um pouco mais além e criei listas ao invés das variáveis tradicionais, de tal forma é possível cadastrar e acessar mais de uma conta dentro desse sistema. Cada conta pode realizar seus próprios depósitos e saques, sem uma interferir na outra.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+# Execução
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+Execute o sistema via terminal, por meio do comando:
+```bash
+$ java --enable-preview [diretório da pasta bin] ContaTerminal
+```
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+Caso esteja na raíz da pasta C:/, por exemplo, deve ser executado assim:
+```bash
+$ java --enable-preview 'C:\ContaBanco\bin\' ContaTerminal
+```
